--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="mobile.css" />
     <link rel="stylesheet" href="grid.css" />
     <link rel="stylesheet" href="footer.css" />
+   
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap"
@@ -60,7 +61,7 @@
           />
         </div>
       </div>
-      <!-- <nav class="mobile-menu">
+      <nav class="mobile-menu">
         <ul class="nav-bar">
           <li class="logo">
             <a href="#"><img src="./images/logo.png" /></a>
@@ -78,7 +79,7 @@
             ><i class="fas fa-bars"></i
           ></label>
         </ul>
-      </nav> -->
+      </nav>
       <div class="container-hermes">
         <a href="https://www.hermes.com/us/en/">
           <img
@@ -100,18 +101,19 @@
         <span id="item-1"></span>
         <span id="item-2"></span>
         <span id="item-3"></span>
-      </div>
-      <div class="button-item item-1">
-        <a href="#item-3" class="arrow-prev arrow"></a>
-        <a href="#item-2" class="arrow-next arrow"></a>
-      </div>
-      <div class="button-item item-2">
-        <a href="#item-1" class="arrow-prev arrow"></a>
-        <a href="#item-3" class="arrow-next arrow"></a>
-      </div>
-      <div class="button-item item-3">
-        <a href="#item-2" class="arrow-prev arrow"></a>
-        <a href="#item-1" class="arrow-next arrow"></a>
+
+        <div class="button-item item-1">
+          <a href="#item-3" class="arrow-prev arrow"></a>
+          <a href="#item-2" class="arrow-next arrow"></a>
+        </div>
+        <div class="button-item item-2">
+          <a href="#item-1" class="arrow-prev arrow"></a>
+          <a href="#item-3" class="arrow-next arrow"></a>
+        </div>
+        <div class="button-item item-3">
+          <a href="#item-2" class="arrow-prev arrow"></a>
+          <a href="#item-1" class="arrow-next arrow"></a>
+        </div>
       </div>
     </div>
     <!-- <div class="container">
@@ -176,8 +178,8 @@
     </div>
     <div class="video">
       <iframe
-        width="1535"
-        height="800"
+        width="1920"
+        height="1080"
         src="https://www.youtube.com/embed/8XJluAuGNcA?si=PLLM317eezUIdJcP&autoplay=1&mute=1"
         title="YouTube video player"
         frameborder="0"
