--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
     <!-- </div> -->
 
     <div class="logo">
+      <div class="logo-ig">
       <img
         src="https://seeklogo.com/images/I/instagram-logo-A807AD378B-seeklogo.com.png"
         alt=""
-      />
-      <img src="https://www.svgrepo.com/show/3885/facebook.svg" alt="" />
-      <img src="https://www.svgrepo.com/show/512664/pinterest-180.svg" alt="" />
+      /></div>
+      <div class="logo-fb"><img src="https://www.svgrepo.com/show/3885/facebook.svg" alt="" /></div>
+      <div class="logo-pinterest"><img src="https://www.svgrepo.com/show/512664/pinterest-180.svg" alt="" /></div>
     </div>
 
     <h2>Our team Designer</h2>
