--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       </div>
       <h1 class="head">_____________Women's Apparel Company_____________</h1>
     </header>
+    
     <div class="container-carousell">
       <div class="container-button">
         <span id="item-1"></span>
@@ -145,7 +146,7 @@
       <div class="logo-pinterest"><img src="https://www.svgrepo.com/show/512664/pinterest-180.svg" alt="" /></div>
     </div>
 
-    <h2>Our team Designer</h2>
+    <h2 class="team-design">Our team Designer</h2>
 
     <div class="grid-container">
       <div class="grid-item">
