--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <nav class="mobile-menu">
         <ul class="nav-bar">
           <li class="logo">
-            <a href="#"><img src="./images/logo.png" /></a>
+            <a href="#"><img src="" /></a>
           </li>
           <input type="checkbox" id="check" />
           <span class="menu">
@@ -96,7 +96,7 @@
       </div>
       <h1 class="head">_____________Women's Apparel Company_____________</h1>
     </header>
-    
+
     <div class="container-carousell">
       <div class="container-button">
         <span id="item-1"></span>
@@ -136,16 +136,6 @@
         </div> -->
     <!-- </div> -->
 
-    <div class="logo">
-      <div class="logo-ig">
-      <img
-        src="https://seeklogo.com/images/I/instagram-logo-A807AD378B-seeklogo.com.png"
-        alt=""
-      /></div>
-      <div class="logo-fb"><img src="https://www.svgrepo.com/show/3885/facebook.svg" alt="" /></div>
-      <div class="logo-pinterest"><img src="https://www.svgrepo.com/show/512664/pinterest-180.svg" alt="" /></div>
-    </div>
-
     <h2 class="team-design">Our team Designer</h2>
 
     <div class="grid-container">
@@ -154,29 +144,29 @@
           src="https://s3.envato.com/files/306801198/FD2A7181.jpg"
           alt="Image 1"
         />
-        <div class="designer">Coco Chanel</div>
       </div>
+      <div class="designer">Coco Chanel</div>
       <div class="grid-item">
         <img
           src="https://i.pinimg.com/736x/1d/28/b3/1d28b3dc852bac75abcb9729f7a0e0dd.jpg"
           alt="Image 2"
         />
-        <div class="designer">Ralph Lauren</div>
       </div>
+      <div class="designer">Ralph Lauren</div>
       <div class="grid-item">
         <img
           src="https://s2.r29static.com/bin/entry/f4b/1,276,1806,2167/720x864,85/1941786/image.webp"
           alt="Image 2"
         />
-        <div class="designer">Tom Ford</div>
       </div>
+      <div class="designer">Tom Ford</div>
       <div class="grid-item">
         <img
           src="https://i.pinimg.com/736x/d0/14/c0/d014c02bd50786ad6d2dff13442626db.jpg"
           alt="Image 2"
         />
-        <div class="designer">Yves Saint Laurent</div>
       </div>
+      <div class="designer">Yves Saint Laurent</div>
     </div>
     <div class="video">
       <iframe
@@ -192,14 +182,33 @@
 
     <footer>
       <div class="footer-container">
-        <div class="information">
-          <p>Life Etc.______________________________________________________</p>
+        <div class="logo-sosmed">
+          <div class="logo-ig">
+            <img
+              src="https://seeklogo.com/images/I/instagram-logo-A807AD378B-seeklogo.com.png"
+              alt=""
+            />
+          </div>
+          <div class="logo-fb">
+            <img src="https://www.svgrepo.com/show/3885/facebook.svg" alt="" />
+          </div>
+          <div class="logo-pinterest">
+            <img
+              src="https://www.svgrepo.com/show/512664/pinterest-180.svg"
+              alt=""
+            />
+          </div>
         </div>
-        <div class="information">
-          <p>info@my-domain.com</p>
-          <p>500 Terry Francine</p>
-          <p>Street San Francisco, CA 94158</p>
-          <p>Tel: 123-456-7890</p>
+        <div class="container-information">
+          <div class="information">
+            <p>Life Etc.______________________</p>
+          </div>
+          <div class="information">
+            <p>info@my-domain.com</p>
+            <p>500 Terry Francine</p>
+            <p>Street San Francisco, CA 94158</p>
+            <p>Tel: 123-456-7890</p>
+          </div>
         </div>
       </div>
     </footer>
